@@ -118,6 +118,7 @@ nav:
     - Move: page/lsp-move.md
     - MDX: page/lsp-mdx.md
     - MSSQL: https://emacs-lsp.github.io/lsp-mssql
+    - Nextflow: page/lsp-nextflow.md
     - Nginx: page/lsp-nginx.md
     - Nim: page/lsp-nim.md
     - Nix (nixd-lsp): page/lsp-nix-nixd.md
